# NexusSymdex

./: .gitignore  ARCHITECTURE.md  LANGUAGE_SUPPORT.md  README.md  SECURITY.md  SPEC.md  TOKEN_SAVINGS.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
benchmarks/: annotator.py  benchmark_runner.py  bridging.py  classifier.py  context_builders.py  judge.py  questions.json  setup_click.py  test_context_builders.py  test_smoke.py
benchmarks/results/: _v12_contexts.json  _v13_contexts.json  _v14_contexts.json  _v15_contexts.json  benchmark_20260310_152918.json  benchmark_20260310_155720.json  benchmark_20260310_164655.json  benchmark_20260310_173402.json  benchmark_20260310_175621.json  benchmark_20260310_175945.json  benchmark_20260310_182121.json  benchmark_20260310_182254.json  benchmark_20260310_184430.json  benchmark_20260310_184737.json  benchmark_20260310_191020.json  benchmark_20260310_204218.json  benchmark_20260310_210731.json  benchmark_20260310_214824.json  (+10 more)
tests/: test_anthropic_optional.py  test_auto_reindex.py  test_bug_fixes.py  test_cleanup.py  test_cli.py  test_compare_export.py  test_cortex_integration.py  test_diff_history.py  test_from_symbol.py  test_hardening.py  test_hierarchy_similar.py  test_incremental.py  test_intelligence.py  test_languages.py  test_nexusforge.py  test_nexustime.py  test_parser.py  test_parser_bugs.py  test_review_context.py  test_search.py  test_security.py  test_server.py  test_storage.py  test_storage_bugs.py  test_suggest_hotspots.py  test_summarizer.py  test_tools.py  token_comparison.py
(+73 files in other folders)
